--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "NayLaBotz",
-  "version": "14.18.2",
-  "description": "© nayla",
+  "name": "Shikimori-Md",
+  "version": "4.18.2",
+  "description": "© Fathur",
   "depecrated": "false",
   "main": "index.js",
   "directories": {
